Mantaflow Fluid Sim fails when simulation starts after frame 1 #72860

Closed
opened 2020-01-03 00:20:30 +01:00 by David · 12 comments

System Information
Operating system: Windows 10 1903
Graphics card: GTX 1060 6GB

Blender Version
Broken: 2.82 Alpha, 56ef761381, 2019-12-30

Short description of error
Mantaflow Fluid Sim ignores Liquid Geometry when simulation starts later than frame 1. It also doesn't work if scene start frame in output settings is set to the same frame the mantaflow sim starts. So it seems unrelated to the start frame in output settings. Just setting any other frame later than frame 1 results in the liquid geometry not taking part in the simulation.

Exact steps for others to reproduce the error
Based on the default startup, create a cube and set as Fluid>Domain>Liquid and make sure to uncheck and recheck the Liquid checkbox because of the checkbox appearing to being enabled by default in this version. This is a known bug though.

Create another cube inside the domain and set as Fluid>Flow>Liquid>Geometry.

In the cache settings of the fluid domain set the start frame of the simulation to anything greater than 1.

Bake the fluid sim by pressing "Bake Data" in the Settings tab of the fluid domain.

Result: No fluid particles are generated.

Thanks for the great work!

**System Information** Operating system: Windows 10 1903 Graphics card: GTX 1060 6GB **Blender Version** Broken: 2.82 Alpha, 56ef761381ec, 2019-12-30 **Short description of error** Mantaflow Fluid Sim ignores Liquid Geometry when simulation starts later than frame 1. It also doesn't work if scene start frame in output settings is set to the same frame the mantaflow sim starts. So it seems unrelated to the start frame in output settings. Just setting any other frame later than frame 1 results in the liquid geometry not taking part in the simulation. **Exact steps for others to reproduce the error** Based on the default startup, create a cube and set as Fluid>Domain>Liquid and make sure to uncheck and recheck the Liquid checkbox because of the checkbox appearing to being enabled by default in this version. This is a known bug though. Create another cube inside the domain and set as Fluid>Flow>Liquid>Geometry. In the cache settings of the fluid domain set the start frame of the simulation to anything greater than 1. Bake the fluid sim by pressing "Bake Data" in the Settings tab of the fluid domain. Result: No fluid particles are generated. Thanks for the great work!
Author

Added subscriber: @Accelero

Added subscriber: @Accelero

Added subscriber: @MiroHorvath

Added subscriber: @MiroHorvath

Hi @Accelero,

I'm having the same problem(version ed32db06c124 from 16 dec 2019), but do I understand well that you're able to get it working(particles generated) if start frame is set to 1? It seems so from your description... in my case whatever I set as start/end frame it doesn't generate particles at all.

Hi @Accelero, I'm having the same problem(version ed32db06c124 from 16 dec 2019), but do I understand well that you're able to get it working(particles generated) if start frame is set to 1? It seems so from your description... in my case whatever I set as start/end frame it doesn't generate particles at all.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Starting from frame 2 also works, but I can confirm the problem with frame 3 or more.

Starting from frame 2 also works, but I can confirm the problem with frame 3 or more.
Author

@MiroHorvath, @mano-wii I can confirm: No Particles are generated in my case, when I start on frame 3 or later. If I start on frame 1 or 2 it works as expected.

@MiroHorvath, @mano-wii I can confirm: No Particles are generated in my case, when I start on frame 3 or later. If I start on frame 1 or 2 it works as expected.

This issue was referenced by 689a873029

This issue was referenced by 689a873029b9554a60ee1198344a29cd2f567659

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-01-15 22:07:26 +01:00

Added subscriber: @theinfinites

Added subscriber: @theinfinites

having the same issue. has it been solved?

having the same issue. has it been solved?

With the latest master it should be possible to bake with any start frame (even negative startframes are allowed). Please reopen if there is still a problem!

With the latest master it should be possible to bake with any start frame (even negative startframes are allowed). Please reopen if there is still a problem!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72860
No description provided.