Fix T72860: Mantaflow Fluid Sim fails when simulation starts after frame 1